# glue-add-date-partition

./: README.md
glue-add-partition/: pyproject.toml
glue-add-partition/src/glue_add_partition/: glue_add_partition.py
