[tool.poetry]
name = "glue-add-partition"
version = "0.1.0"
description = ""
authors = ["pavankemani <emani.pavankumar@gmail.com>"]
readme = "README.md"
packages = [{include = "glue_add_partition", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
